# kezbot

./: .gitignore  CMakeLists.txt  package.xml
firmware/main_firmware/: main_firmware.ino
kezbot/: CMakeLists.txt  package.xml
kezbot/scripts/: setup.bash
kezbot_arduino/: CMakeLists.txt  package.xml
kezbot_arduino/firmware/: main_firmware.cpp
kezbot_arduino/launch/: arduino.launch
kezbot_bringup/: CMakeLists.txt  package.xml
kezbot_bringup/launch/: bringup.launch  view_robot.launch
kezbot_bringup/rviz/: view_kezbot.rviz
kezbot_control/: CMakeLists.txt  package.xml
kezbot_control/config/: joints.yaml
kezbot_control/launch/: kezbot_controller.launch
kezbot_description/: CMakeLists.txt  package.xml
kezbot_description/urdf/: kezbot.xacro
kezbot_gazebo/: CMakeLists.txt  package.xml
kezbot_gazebo/launch/: kezbot_gazebo.launch  spawner.launch
kezbot_navigation/: CMakeLists.txt  package.xml
kezbot_navigation/launch/: amcl.launch  (+3 more)
kezbot_odometry/: CMakeLists.txt  package.xml
kezbot_rplidar/: CMakeLists.txt  package.xml
kezbot_rplidar/launch/: rplidar.launch
kezbot_rplidar/launch/include/: rplidar.launch.xml
kezbot_teleop/: CMakeLists.txt  package.xml
kezbot_udev/: CMakeLists.txt  package.xml
launch/: amcl.launch  bringup.launch  bringup_base.launch  bringup_laser.launch  bringup_ns.launch  bringup_raspicam.launch  bringup_robot.launch  build_map.launch  load_map.launch  multimaster.launch  nav_amcl.launch  nav_build_map.launch  sim_nav_build_map.launch  sim_stage_bringup.launch  simulation.launch  simulation_stage.launch  stage_sim_base.launch  teleop.launch  teleop_xbox.launch  view_robot.launch
mantis/: CMakeLists.txt  package.xml
mantis_arduino/: CMakeLists.txt  package.xml
mantis_bringup/: CMakeLists.txt  package.xml
mantis_control/: CMakeLists.txt  package.xml
mantis_description/: CMakeLists.txt  package.xml
mantis_gazebo/: CMakeLists.txt  package.xml
mantis_navigation/: CMakeLists.txt  package.xml
mantis_odometry/: CMakeLists.txt  package.xml
mantis_rplidar/: CMakeLists.txt  package.xml
mantis_teleop/: CMakeLists.txt  package.xml
mantis_udev/: CMakeLists.txt  package.xml
maps/: stage_map.pgm  stage_map.yaml  tmp_map.pgm  tmp_map.yaml
mirBeta/: CMakeLists.txt  package.xml
mirBeta_arduino/: CMakeLists.txt  package.xml
mirBeta_bringup/: CMakeLists.txt  package.xml
mirBeta_control/: CMakeLists.txt  package.xml
mirBeta_description/: CMakeLists.txt  package.xml
mirBeta_gazebo/: CMakeLists.txt  package.xml
mirBeta_navigation/: CMakeLists.txt  package.xml
mirBeta_odometry/: CMakeLists.txt  package.xml
mirBeta_rplidar/: CMakeLists.txt  package.xml
mirBeta_teleop/: CMakeLists.txt  package.xml
mirBeta_teleop/launch/: teleop.launch
mirBeta_teleop/launch/includes/: xbox.launch.xml
mirBeta_udev/: CMakeLists.txt  package.xml
mrb_1/: CMakeLists.txt  package.xml
mrb_1_arduino/: CMakeLists.txt  package.xml
mrb_1_bringup/: CMakeLists.txt  package.xml
mrb_1_control/: CMakeLists.txt  package.xml
mrb_1_description/: CMakeLists.txt  package.xml
mrb_1_gazebo/: CMakeLists.txt  package.xml
mrb_1_navigation/: CMakeLists.txt  package.xml
mrb_1_odometry/: CMakeLists.txt  package.xml
mrb_1_rplidar/: CMakeLists.txt  package.xml
mrb_1_teleop/: CMakeLists.txt  package.xml
mrb_1_teleop/launch/: teleop.launch
mrb_1_teleop/launch/includes/: xbox.launch.xml
mrb_1_udev/: CMakeLists.txt  package.xml
rviz/: view_kezbot.rviz
scripts/: setup.bash
src/: odom_publisher.cpp  rplidar_node.cpp  sim_odom_publisher.cpp  sim_tf_broadcaster.cpp  teleop_joy.cpp  tf_broadcaster.cpp
udev/: 02-kezbot.rules
(+113 files in other folders)
