<?xml version="1.0"?>
<package format="2">
  <name>mrb_1_teleop</name>
  <version>0.0.0</version>
  <description>The mrb_1_teleop package</description>

  <maintainer email="cem@todo.todo">cem</maintainer>


  <license>TODO</license>


  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
